# nexmem-mcp

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
scripts/: install.sh
src/hivemind_mcp/: __init__.py  config.py  manager.py  namespace.py  server.py  types.py
src/hivemind_mcp/adapters/: __init__.py  base.py  jsonl.py  mongodb.py  postgres.py  redis.py  sqlite.py
src/nexmem_mcp/: __init__.py  cli.py  config.py  manager.py  namespace.py  server.py
src/nexmem_mcp/adapters/: __init__.py  base.py  jsonl.py  mongodb.py  postgres.py  redis.py  sqlite.py
tests/: conftest.py  test_manager.py  test_namespace.py  test_types.py
tests/test_adapters/: test_jsonl.py  test_sqlite.py
