[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-nexmem"
version = "0.2.0"
description = "NexMem: Shared Agent Memory for Teams — a plug-and-play MCP memory server with pluggable database backends"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "NexMem Contributors" },
]
keywords = ["mcp", "memory", "knowledge-graph", "ai", "team", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "fastmcp>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
mongodb = ["motor>=3.0.0"]
postgres = ["asyncpg>=0.29.0"]
redis = ["redis[hiredis]>=5.0.0"]
all = [
    "motor>=3.0.0",
    "asyncpg>=0.29.0",
    "redis[hiredis]>=5.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
nexmem-mcp = "nexmem_mcp.server:main"

[project.urls]
Homepage = "https://github.com/arpanroy41/nexmem-mcp"
Repository = "https://github.com/arpanroy41/nexmem-mcp"
Issues = "https://github.com/arpanroy41/nexmem-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/nexmem_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
